# foss-acronyms-cli

./: Cargo.toml  README.md
src/: main.rs
